# weibo-chat

./: .gitignore  readme.md
go/: config.toml  main.go  pg.sh
go/consts/: consts.go
go/db/: main.go  model.go  user.go
go/db/mongo/crud/: main.go  readme.md
go/public/: index.html  msg.json
go/spider/: main.go
go/types/: msg.go
go/types/batch_exists/: batch_exists.go
go/types/contact/: contact.go
go/types/conversation/: conversation.go
go/types/query/: main.go
go/types/query_group/: query_group.go
go/types/send_message/: main.go
go/types/show/: show.go
js/: api.js  index.html  item.json
py/: 1.js  save_chat.py
server/: .env  Cargo.toml  db.sh
server/src/: lib.rs  main.rs  models.rs  msg.rs  schema.rs
