[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["小舟从此逝 <1052334039@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
tokio = "0.2.21"
#mysql_async = "0.23.1"
#mysql = "18.2.0"
#diesel = "1.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
